Fix z-index.

--- a/themes/mdn_yari_theme.sass
+++ b/themes/mdn_yari_theme.sass
@@ -40,8 +40,8 @@
     margin-left: 13px
     transform: translateY(-50%)
     padding: 8px
-
     display: none
+    z-index: 2
 
   &:hover::before
     display: block
